--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <span class="close">&times;</span>
       <h2>Thank You, My Love!</h2>
       <p>Your yes fills my heart with endless joy.</p>
-      <!-- Replace the src URL with your desired image where roses are showering -->
+      <!-- Replace the src URL with your own Image -->
       <img src="https://hips.hearstapps.com/hmg-prod/images/camila-cabello-and-shawn-mendes-attend-the-2019-mtv-video-news-photo-1681759710.jpg?crop=0.772xw:1.00xh;0.115xw,0&resize=1200:*" alt="Roses Showering" class="rose-img" />
     </div>
   </div>
